fix(5-2): apply code review patches — P1-P11 (P12 flagged)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>